<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.developer.jcdc.mytips.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="*"
        android:stretchColumns="*">
        <LinearLayout
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_bill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/bill"
                android:layout_gravity="center_vertical"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_bill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/et_bill"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/hint_bill"
                    android:maxLength="9"
                    android:focusable="false"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <TableRow>
            <TextView
                android:id="@+id/tv_nPerson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:layout_weight="1"
                android:text="@string/nPersons" />
        </TableRow>
        <View style="@style/Separator" />
        <TableRow>
            <TextView
                android:id="@+id/tv_nTPerson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:text="@string/nTpersons"
                android:gravity="center_vertical"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageButton
                    android:id="@+id/ImBtn_min"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@null"
                    android:layout_gravity="center"
                    android:src="@drawable/button_res"
                    android:contentDescription="@null"
                     />
                <EditText
                    android:id="@+id/et_nPerson"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="2"
                    android:inputType="number"
                    android:maxLength="3"
                    android:maxLines="1"
                    android:text="@string/vTPersons"
                    android:focusable="false"/>
                <ImageButton
                    android:id="@+id/ImBtn_max"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@null"
                    android:layout_gravity="center"
                    android:src="@drawable/button_sum"
                    android:contentDescription="@null"/>
            </LinearLayout>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/tv_percent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:layout_weight="1"
                android:text="@string/tip" />
        </TableRow>
        <View style="@style/Separator" />
        <RadioGroup
            android:id="@+id/rg_percents"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_weight="1"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rb_tenPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/r1" />
            <RadioButton
                android:id="@+id/rb_fifteenPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/r2" />
            <RadioButton
                android:id="@+id/rb_twentyPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/r3" />
            <RadioButton
                android:id="@+id/rb_variablePercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/r4" />
        </RadioGroup>
        <TableRow>
            <SeekBar
                android:id="@+id/skb_variablePercent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:layout_weight="1"
                android:max="100" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/tv_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:layout_weight="1"
                android:text="@string/result" />
        </TableRow>
        <View style="@style/Separator" />
        <TableRow android:id="@+id/tr_PI">
            <TextView
                android:id="@+id/tv_tipPerson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:text="@string/tipPerson" />
            <TextView
                android:id="@+id/tv_rTipPerson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:text="" />
        </TableRow>
        <TableRow android:id="@+id/tr_PT">
            <TextView
                android:id="@+id/tv_Totaltip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:text="@string/tipTotal" />
            <TextView
                android:id="@+id/tv_rTotalTip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:text="" />
        </TableRow>
        <TableRow android:id="@+id/tr_MI">
            <TextView
                android:id="@+id/tv_billPerson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:text="@string/totalBill" />
            <TextView
                android:id="@+id/tv_rbillPerson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:text="" />
        </TableRow>
        <TableRow android:id="@+id/tr_MT">
            <TextView
                android:id="@+id/tv_totalPerson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:text="@string/totalPersona" />
            <TextView
                android:id="@+id/tv_rTotalPerson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:text="" />
        </TableRow>
        <TableRow android:id="@+id/tr_IVA">
            <TextView
                android:id="@+id/tv_Iva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:text="@string/SIva" />
            <TextView
                android:id="@+id/tv_rIva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:text="" />
        </TableRow>
        <TableRow android:id="@+id/tr_TT">
            <TextView
                android:id="@+id/tv_gTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:text="@string/gTotal" />
            <TextView
                android:id="@+id/tv_rGPerson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:text="" />
        </TableRow>
    </TableLayout>
</ScrollView>